# Traffic-Simulation

./: .gitattributes  .gitignore  README.md  data.csv  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tempCodeRunnerFile.py
config/: README.md  default.yaml  vehicles.yaml
tests/: README.md  test_road.py  test_simulation.py  test_vehicle.py
trafficSim/: README.md  __init__.py  config.py  config_loader.py  curve.py  road.py  road_network.py  simulation.py  traffic_signal.py  vehicle.py  vehicle_generator.py  window.py
